--- a/Descargador universal.html
+++ b/Descargador universal.html
@@ -390,7 +390,7 @@
 
     <script>
         // URL del API (cambiar por tu URL de Render)
-        let API_URL = localStorage.getItem('apiUrl') || '';
+        let API_URL = localStorage.getItem('apiUrl') || 'let API_URL = localStorage.getItem('apiUrl') || 'https://universal-downloader-ra0f.onrender.com';';
 
         function toggleConfig() {
             const configBox = document.getElementById('configBox');
