--- a/Descargador universal.html
+++ b/Descargador universal.html
@@ -364,7 +364,7 @@
 
     <script>
         // URL del API - YA CONFIGURADA CON TU SERVIDOR
-        const API_URL = 'https://universal-downloader-ra0f.onrender.com';
+        const API_URL = 'https://pandabamboo1.github.io/';
 
         // Verificar estado del servidor al cargar
         async function checkServerStatus() {
